--- a/busquedasEn.html
+++ b/busquedasEn.html
@@ -50,24 +50,17 @@
 
         <nav id="nav-menu-container" style="margin-top: 1rem">
           <ul class="nav-menu">
-            <li><a href="index.html#intro">Inicio</a></li>
-                        <li><a href="index.html#about">Sobre nosotros</a></li>
-                        <li><a href="index.html#services">Servicios</a></li>
-                        <li><a href="index.html#team">Equipo</a></li>
+            <li class="menu-active"><a href="eng.html#intro">Home</a></li>
+                        <li><a href="eng.html#about">About us</a></li>
+                        <li><a href="eng.html#services">Services</a></li>
+                        <li><a href="eng.html#team">Team</a></li>
+                        <li><a href="busquedasEn.html">Searches</a></li>
                         <li>
-                            <a class="menu-active menu-item-active" href="#Busquedas">Búsquedas</a
+                            <a class="menu-active menu-item" href=" https://hiringroom.com/jobs/get_vacancy/5dc314839aab466917d39e8f/candidates/new">Upload Cv</a
               >
             </li>
-            <li>
-              <a
-                class="menu-active menu-item"
-                href=" https://hiringroom.com/jobs/get_vacancy/5dc314839aab466917d39e8f/candidates/new"
-                >Cargar Cv</a
-              >
-            </li>
-
-            <li><a href="index.html#contact">Contacto</a></li>
-                        <li><a href="busquedasEn.html">English</a></li>
+            <li><a href="eng.html#contact">Contact</a></li>
+                        <li><a href="busquedas.html">Español</a></li>
                         </ul>
                         </nav>
                 </div>
@@ -75,7 +68,7 @@
     <section id="Busquedas" style="margin-top: 7rem; min-height: 80vh">
         <div class="container">
             <header class="section-header">
-                <h3>Búsquedas abiertas</h3>
+                <h3>Open searches</h3>
                 <!-- <p>
                     idear<span class="color-idear">humano</span> es una consultora con profesionales de experiencia y especializados para ofrecer un servicio de calidad integral en la Gestión del talento humano.
                     <br />Colaboramos e ideamos planes de acción a medida para enfrentar los retos del mercado laboral, potenciamos cada actividad de empresa para que cumplan con sus objetivos estratégicos, ofreciendo las mejores prácticas y tendencias
@@ -94,12 +87,12 @@
           ">
                 <li class="nav-item" role="presentation">
                     <button class="nav-link active" id="home-tab" data-bs-toggle="tab" data-bs-target="#home" type="button" role="tab" aria-controls="home" aria-selected="true">
-              Búsquedas It
+              It searches
             </button>
                 </li>
                 <li class="nav-item" role="presentation">
                     <button class="nav-link" id="profile-tab" data-bs-toggle="tab" data-bs-target="#profile" type="button" role="tab" aria-controls="profile" aria-selected="false">
-              Otros perfiles
+              Other profiles
             </button>
                 </li>
             </ul>
