--- a/eng.html
+++ b/eng.html
@@ -51,17 +51,17 @@
 
                 <nav id="nav-menu-container" style="margin-top: 1rem;">
                     <ul class="nav-menu">
-                        <li class="menu-active"><a href="#intro">Inicio</a></li>
-                        <li><a href="#about">Sobre nosotros</a></li>
-                        <li><a href="#services">Servicios</a></li>
-                        <li><a href="#team">Equipo</a></li>
-                        <li><a href="busquedas.html">Búsquedas</a></li>
+                        <li class="menu-active"><a href="#intro">Home</a></li>
+                        <li><a href="#about">About us</a></li>
+                        <li><a href="#services">Services</a></li>
+                        <li><a href="#team">Team</a></li>
+                        <li><a href="busquedasEn.html">Searches</a></li>
                         <li>
-                            <a class="menu-active menu-item" href=" https://hiringroom.com/jobs/get_vacancy/5dc314839aab466917d39e8f/candidates/new">Cargar Cv</a
+                            <a class="menu-active menu-item" href=" https://hiringroom.com/jobs/get_vacancy/5dc314839aab466917d39e8f/candidates/new">Upload Cv</a
               >
             </li>
-                        <li><a href="#contact">Contacto</a></li>
-                        <li><a href="eng.html">English</a></li>
+                        <li><a href="#contact">Contact</a></li>
+                        <li><a href="index.html">Español</a></li>
                         </ul>
                         </nav>
 
@@ -80,7 +80,7 @@
                         </div>
                         <div class="carousel-container">
                             <div class="carousel-content m-5">
-                                <h1 class="big-slider wow slideInRight">BUSCAMOS EL PERSONAL QUE TU EMPRESA NECESITA</h2>
+                                <h1 class="big-slider wow slideInRight">WE LOOK FOR THE STAFF YOUT COMPANY NEEDS</h2>
 
                             </div>
                         </div>
@@ -92,7 +92,8 @@
                         </div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h1 class="big-slider-2   wow fadeIn ">NOS ESPECIALIZAMOS EN BUSQUEDAS IT</h2>
+                                <h1 class="big-slider-2   wow fadeIn ">
+                                    WE SPECIALIZE IN IT SEARCHES</h2>
                                     <p class="subtitle-programming-languajes wow fadeIn ">
                                         JS | PY | PHP | JAVA | C | C++ | C# | RUBY | PYTHON | JAVASCRIPT | R | SQL | HTML | CSS | DEVOPS | CLOUD | TEST | SCRUM | AGILE
                                     </p>
@@ -107,7 +108,8 @@
                         </div>
                         <div class="carousel-container">
                             <div class="carousel-content">
-                                <h1 class="big-slider-3 wow fadeIn">CONSEGUIMOS LOS MEJORES PERFILES DESDE ARGENTINA PARA LATAM</h1>
+                                <h1 class="big-slider-3 wow fadeIn">
+                                    WE GET THE BEST PROFILES FROM ARGENTINA FOR LATAM</h1>
 
                             </div>
                         </div>
@@ -126,7 +128,7 @@
                     <span class="sr-only">Next</span>
                 </a>
 
-                <a href="#contact" class="btn-get-started scrollto bigButton">Empecemos la busqueda</a>
+                <a href="#contact" class="btn-get-started scrollto bigButton">LET'S START THE SEARCH</a>
             </div>
         </div>
 
@@ -140,9 +142,9 @@
                 <header class="section-header">
                     <h3>Sobre nosotros</h3>
                     <p>
-                        idear<span class="color-idear">humano</span> es una consultora con profesionales de experiencia y especializados para ofrecer un servicio de calidad integral en la Gestión del talento humano.
-                        <br />Colaboramos e ideamos planes de acción a medida para enfrentar los retos del mercado laboral, potenciamos cada actividad de empresa para que cumplan con sus objetivos estratégicos, ofreciendo las mejores prácticas y tendencias
-                        en el área de Recursos Humanos
+                        idear<span class="color-idear">humano</span> is a consulting firm with experienced and specialized professionals that offer a comprehensive quality service in the Management of human talent
+                        <br />We collaborate and devise tailor-made action plans to face the challenges of the labor market, we promote each company activity so that they meet their strategic objectives, offering the best practices and trends in the area
+                        of ​​Human Resources
                     </p>
                 </header>
 
@@ -155,9 +157,9 @@
                                     <i class="ion-ios-speedometer-outline"></i>
                                 </div> -->
                             </div>
-                            <h2 class="title"><a href="#">Nuestra Misión</a></h2>
+                            <h2 class="title"><a href="#">Our mision</a></h2>
                             <p>
-                                Ser una consultora global de atracción de talentos en tecnología, líder en Argentina para el mundo. </p>
+                                Be a global consulting firm of talent atraction in tech, leader in Argentina to the world. </p>
                         </div>
                     </div>
                     <div class="col-md-4 wow fadeInUp" data-wow-delay="0.2s">
@@ -166,9 +168,9 @@
                                 <!-- <img src="img/about-vision.jpg" alt="" class="img-fluid" /> -->
                                 <!-- <div class="icon"><i class="ion-ios-eye-outline"></i></div> -->
                             </div>
-                            <h2 class="title"><a href="#">Nuestra Vision</a></h2>
+                            <h2 class="title"><a href="#">Our vision</a></h2>
                             <p>
-                                Potenciar a empresas y personas, desde la pasión, el profesionalismo, entusiasmo, viviendo nuestros valores y diferenciarnos por la experiencia vivida en el proceso.
+                                To enhance enterprises and people, fron pasión, profesionality, enthusiasm, living our values and differentiate ourselves by the experience lived during the process.
                             </p>
                         </div>
                     </div>
@@ -178,9 +180,9 @@
                                 <!-- <img src="img/about-plan.jpg" alt="" class="img-fluid" /> -->
                                 <!-- <div class="icon"><i class="ion-ios-list-outline"></i></div> -->
                             </div>
-                            <h2 class="title"><a href="#">Nuestros Valores</a></h2>
+                            <h2 class="title"><a href="#">Our values</a></h2>
                             <p>
-                                Buscamos la excelencia en nuestros resultados, forjamos relaciones duraderas basadas en la confianza y vivimos con intensidad nuestros valores esenciales de colaboración, innovación, honestidad, pasión y apertura. </p>
+                                We look for the excelence in our results, we forge enduring relationships based in truste and we live with intensity our scentials values of colaboration, innovation, honesty, passion and opening.</p>
                         </div>
                     </div>
 
@@ -198,32 +200,30 @@
 
             <div class="container">
                 <header class="section-header wow fadeInUp">
-                    <h3>Servicios</h3>
-                    <p>Nos adaptamos a las necesidades de tu empresa.</p>
+                    <h3>Services</h3>
+                    <p>We adapt ourselves to your Enterprise needs</p>
                 </header>
 
                 <div class="row">
                     <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                         <div class="icon"><i class="ion-ios-analytics-outline"></i></div>
-                        <h4 class="title"><a href="">Reclutamiento</a></h4>
+                        <h4 class="title"><a href="">Recruiting</a></h4>
                         <p class="description">
-                            Tu empresa necesita personal. Nosotros te ayudamos a encontrarlo.
+                            Your company needs personnel. We help you to find it.
                         </p>
                     </div>
                     <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                         <div class="icon"><i class="ion-ios-bookmarks-outline"></i></div>
                         <h4 class="title"><a href="">Coaching</a></h4>
                         <p class="description">
-                            Brindamos soporte a las empresas para que individuos y equipos logren sus objetivos.
-
+                            We offer support to enterprises fr wich individuals and teams achive their objetives.
                         </p>
                     </div>
                     <div class="col-lg-4 col-md-6 box wow bounceInUp" data-wow-duration="1.4s">
                         <div class="icon"><i class="ion-ios-paper-outline"></i></div>
-                        <h4 class="title"><a href="">Gestión de talento</a></h4>
+                        <h4 class="title"><a href=""> Talent management</a></h4>
                         <p class="description">
-                            Somos especialistas en armar equipos en el área de Reclutamiento y Selección. Potenciamos brindando estrategias de gestión para enfrentar los retos del mercado laboral.
-
+                            We are specialist in build teams in recruiting and selection área. We enhance managment strategies to to face the challenges of the labor market.
                         </p>
                     </div>
 
@@ -235,24 +235,24 @@
         <section id="moreservices" class="position-relative my-2">
             <div class="container mb-5">
                 <header class="section-header wow fadeInUp otrosServicios">
-                    <h4>También ofrecemos</h4>
+                    <h4>We also offer</h4>
 
                 </header>
 
                 <div class="masServicios">
                     <!-- <img class="img1" src="./img/circles-01.png" />
                     <img class="img2" src="./img/circles-02.png" /> -->
-                    <div class="servicioChico mb-4  wow fadeInUp"><span>Diseño equipo de People Operations </span></div>
-                    <div class="servicioChico mb-4  wow fadeInUp"><span>Encuestas de Satisfacción Onboarding y Clima</span></div>
-                    <div class="servicioChico mb-4  wow fadeInUp"><span>Diseño de Documentos Cultural Fit de la empresa y mecánicas inter equipos
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>People Operations team desing. </span></div>
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Satisfaction Surveys Onboarding and Climate</span></div>
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Cultural Fit document desing and interteam mechanics.
                     </span></div>
-                    <div class="servicioChico mb-4  wow fadeInUp"><span>Planes de Capacitación </span></div>
-                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Diseño de Organigrama, bandas salariales y career path por área.
+                    <div class="servicioChico mb-4  wow fadeInUp"><span>Training Plans </span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Organization chart, salary bands and career path desing per area.
                     </span></div>
-                    <div class="servicioChico mb-4 wow fadeInUp"><span>Performance Review y Coaching Plan a implementar por los líderes de área y Team leaders </span></div>
-                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Estandarización, procesos y procedimientos del área </span></div>
-                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Colaborar con la Definición de los OKRs del área de RRHH, contribuir activamente para lograr los objetivos y KRs definidos.</span></div>
-                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Desarrollo, implementación de Plan de Beneficios.</span></div>
+                    <div class="servicioChico mb-4 wow fadeInUp"><span>Performance Review and Coaching Plan to be implemented by area leaders and Team leaders </span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Standardization, processes and procedures of the area </span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Collaborate with the Definition of the OKRs of the HR area, actively contribute to achieve the defined objectives and KRs.</span></div>
+                    <div class="servicioChico  mb-4 wow fadeInUp"><span>Benefits plans developing and implementation</span></div>
 
                 </div>
             </div>
@@ -265,11 +265,11 @@
     ============================-->
             <section id="call-to-action" class="wow fadeIn">
                 <div class="container text-center">
-                    <h3>Tenemos búsquedas abiertas</h3>
+                    <h3>We have open searches</h3>
                     <p>
-                        ¿Queres encontrar tu próximo trabajo?
+                        Do you want to find your next job?
                     </p>
-                    <a class="cta-btn" href="busquedas.html">Mirá las búsquedas abiertas</a>
+                    <a class="cta-btn" href="busquedas.html">See the open searches.</a>
 
                 </div>
             </section>
@@ -317,7 +317,7 @@
             <section class="wow fadeInUp clientesSeccion">
                 <div class="container">
                     <header class="section-header">
-                        <h3>Confían en nosotros</h3>
+                        <h3>They trust in us</h3>
                     </header>
 
                     <div class="d-flex clientes" style="flex-wrap: wrap;justify-content: center;">
@@ -359,7 +359,7 @@
                             <h3>Romina Cruceño</h3>
                             <h4>HR Leader Pi data Strategy & Consulting</h4>
                             <p>
-                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" />Excelente! La experiencia fue placentera desde la reunión inicial. Trabajan con celeridad, orientados a resultados y con mucho profesionalismo
+                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" />Excelent! The experience was pleasant sinsce the first meeting.They work with haste, oriented to objetives and much professionalism
 
                                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="" />
                             </p>
@@ -370,7 +370,7 @@
                             <h4>Responsable de RRHH - Welii
                             </h4>
                             <p>
-                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" /> El acompañamiento fue invaluable. Incluso para cuando los temas no necesariamente fueron del proceso. La paciencia también.
+                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" /> The support was invaluable, even when topics were not about the process. Patience also.
 
                                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="" />
                             </p>
@@ -380,7 +380,7 @@
                             <h4>Resp. RRHH Bolsa de Cereales de Córdoba
                             </h4>
                             <p>
-                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" /> La experiencia de trabajo con IdearHumano fue muy satisfactoria ya que hemos logrado cumplir con el objetivo de incorporar el perfil requerido.
+                                <img src="img/quote-sign-left.png" class="quote-sign-left" alt="" />The working experience with Idearhumano has been satisfactory since we could accomplish the objetive of incorporate the requested profile.
 
                                 <img src="img/quote-sign-right.png" class="quote-sign-right" alt="" />
                             </p>
@@ -419,7 +419,7 @@
             <section id="team">
                 <div class="container">
                     <div class="section-header wow fadeInUp">
-                        <h3>Nuestro equipo</h3>
+                        <h3>Our team</h3>
 
                     </div>
 
@@ -520,8 +520,8 @@
             <section id="contact" class="section-bg wow fadeInUp">
                 <div class="container">
                     <div class="section-header">
-                        <h3>Contacto</h3>
-                        <p>Escribinos y empecemos a trabajar juntos.</p>
+                        <h3>Contact</h3>
+                        <p>Write us and start working with us.</p>
                     </div>
 
                     <div class="row contact-info d-flex justify-content-center">
@@ -577,7 +577,7 @@
                                 <div class="validation"></div>
                             </div>
                             <div class="text-center">
-                                <a class='btn btn-green disabled' id='btnWhataspp' href='#'> Enviar whatsapp</a>
+                                <a class='btn btn-green disabled' id='btnWhataspp' href='#'> Send whatsapp</a>
                             </div>
                         </form>
                     </div>
@@ -596,8 +596,8 @@
                 <div class="iconFooter">
                     <img src="./img/map-pin.svg" alt="gps">
                     <span>
-                    Av. Cárcano 280 Córdoba, Capital C.P 5003 Argentina
-                </span>
+                Av. Cárcano 280 Córdoba, Capital C.P 5003 Argentina
+            </span>
                 </div>
             </div>
             <div class="copyright">
