--- a/eng.html
+++ b/eng.html
@@ -140,7 +140,7 @@
         <section id="about">
             <div class="container">
                 <header class="section-header">
-                    <h3>Sobre nosotros</h3>
+                    <h3>About us</h3>
                     <p>
                         idear<span class="color-idear">humano</span> is a consulting firm with experienced and specialized professionals that offer a comprehensive quality service in the Management of human talent
                         <br />We collaborate and devise tailor-made action plans to face the challenges of the labor market, we promote each company activity so that they meet their strategic objectives, offering the best practices and trends in the area
