--- a/eng.html
+++ b/eng.html
@@ -80,7 +80,7 @@
                         </div>
                         <div class="carousel-container">
                             <div class="carousel-content m-5">
-                                <h1 class="big-slider wow slideInRight">WE LOOK FOR THE STAFF YOUT COMPANY NEEDS</h2>
+                                <h1 class="big-slider wow slideInRight">WE LOOK FOR THE STAFF YOUR COMPANY NEEDS</h2>
 
                             </div>
                         </div>
